# Inspire

./: .gitignore  .vst-server-url  ABLETON_VST_TROUBLESHOOTING.md  CAMERA_ERROR_FIX_SUMMARY.md  CAMERA_QUICK_FIX.md  CAMERA_TESTING_GUIDE.md  CHANGELOG.md  COLLABORATION_TESTING_SUMMARY.md  COLLABORATION_VISUAL_GUIDE.md  COLLABORATIVE_IMPLEMENTATION_SUMMARY.md  COLLABORATIVE_MODE_QUICKSTART.md  DAW_ENHANCEMENT_PLAN.md  DAW_REFACTORING_PROGRESS.md  DOCUMENTATION_INDEX.md  FIREBASE_DELIVERY_SUMMARY.md  FIREBASE_DOCS_INDEX.md  FIREBASE_IMPLEMENTATION_CHECKLIST.md  FIREBASE_INTEGRATION_SUMMARY.md  FIREBASE_PACK_STORAGE_SUMMARY.md  FIREBASE_SETUP_GUIDE.md  FIREBASE_START_HERE.md  FLOW_BEAT_GENERATOR_COMPLETION.md  FLOW_BEAT_GENERATOR_README.md  FLOW_BEAT_GENERATOR_TESTING_RESULTS.md  FLOW_BEAT_GENERATOR_USER_GUIDE.md  FOCUS_BUTTON_CLEANUP_SUMMARY.md  GUEST_RESTRICTIONS_IMPLEMENTATION.md  GUEST_SIGNIN_QUICK_START.md  GUEST_SIGNIN_TESTS_PASSING.md  GUEST_SIGNIN_TEST_ANALYSIS.md  GUEST_SIGNIN_TEST_GUIDE.md  GUEST_SIGNIN_TEST_IMPLEMENTATION_SUMMARY.md  HTTPS_SETUP.md  IMPLEMENTATION_COMPLETE_REPORT.md  IMPLEMENTATION_SUMMARY_FLOW_BEATS.md  INSPIREVST_BUILD_QUICK_REF.sh  INSPIREVST_BUILD_SCRIPT_GUIDE.md  MEME_SOUND_ENHANCEMENT.md  PIANO_ROLL_AUDIO_PLAYBACK.md  POPOUT_PLAYER_DOCUMENTATION_INDEX.md  (+31 more)
InspireVST/: CMakeLists.txt
InspireVST/Source/: FilterControlComponent.cpp  FilterControlComponent.h  FilterDialogComponent.cpp  FilterDialogComponent.h  FontAudioStandalone.cpp  InspirationQueueDialog.cpp  InspirationQueueDialog.h  LyricEditorComponent.cpp  LyricEditorComponent.h  NetworkClient.cpp  NetworkClient.h  PackDetailComponent.cpp  PackDetailComponent.h  (+9 more)
(+343 files in other folders)
